--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+
+    <title>ai rapper</title>
+
+    <style> body {padding: 0; margin: 0;} </style>
+
+    <!-- load libraries -->
+    <script src="./libraries/p5.js"></script>
+    <script src="./libraries/p5.dom.js"></script>
+    <script src="./libraries/p5.speech.js"></script>
+
   </head>
   <body>
-    <p>testing</p>
+
+    <script src="./js/sketch.js"></script>
+
   </body>
 </html>
